[144] [composebox] Fix the cropped focus rings in composebox components.
This change fixes the cropped focus rings for the Tool Chips, Context
Menu button and the Submit button for the composebox.
Screencast:
http://screencast/cast/NTI5NTU1NjI1NDQ5ODgxNnwxZThiODVhMi1mNA

(cherry picked from commit 52161aec75364837bc37d1ec72f6496b70706220)

Bug: b:474152082, b:473031415, b:472215955, 475338251
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7413005
Commit-Queue: Roman Arora <romanarora@chromium.org>
Cr-Original-Commit-Position: refs/heads/main@{#1566293}
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/7453422
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/branch-heads/7559@{#3418}
Cr-Branched-From: 223dfbac1c7542a06b422390d954afe5b560b607-refs/heads/main@{#1552494}

--- a/ui/webui/resources/cr_components/composebox/contextual_entrypoint_and_carousel.css
+++ b/ui/webui/resources/cr_components/composebox/contextual_entrypoint_and_carousel.css
@@ -32,7 +32,6 @@
   margin-bottom: var(--contextual-entrypoint-and-carousel-context-menu-container-margin-bottom);
   min-height: var(--cr-icon-button-size);
   padding-inline-start: var(--contextual-entrypoint-and-carousel-context-menu-container-padding-inline-start, 4px);
-  overflow: hidden;
   flex-wrap: nowrap;
 }
 
